@@ -43,9 +43,11 @@ c3p0.testConnectionOnCheckout=true
 
 #c3p0.jdbcUrl=jdbc:postgresql://localhost:5432/c3p0
 #c3p0.driverClass=
-#c3p0.user=
+#c3p0.user=swaldman
 #c3p0.password=
 #c3p0.forceUseNamedDriverClass=true
+#c3p0.overrideDefaultUser=bobblehead
+#c3p0.overrideDefaultPassword=
 
 #com.mchange.v2.c3p0.cfg.xml=classloader:META-INF/poop.xml
 #com.mchange.v2.c3p0.cfg.xml=/data/home/swaldman/development/gitproj/c3p0/src/test-properties/META-INF/poop.xml
